Fix global header menu z-index for focalboard (#950)

--- a/mattermost-plugin/webapp/src/plugin.scss
+++ b/mattermost-plugin/webapp/src/plugin.scss
@@ -11,3 +11,7 @@
     display: inline-block;
     font-size: 14px;
 }
+
+.focalboard-body .feature-global-header > header {
+    z-index: 1000;
+}
